# PowerSupplyModule

./: .gitignore  meson.build  meson.options
hardware/: LDO.kicad_sch  Library.kicad_sym  PowerSupplyModule.kicad_pcb  PowerSupplyModule.kicad_prl  PowerSupplyModule.kicad_pro  PowerSupplyModule.kicad_sch  TPS5528.kicad_sch  aux_buck_boost.kicad_sch  buck_boost.kicad_sch  buck_boost_converter.kicad_sch  build.kicad_jobset  design-block-lib-table  fabricate.kicad_jobset.in  fp-info-cache  low_noise_output.kicad_sch  meson.build
hardware/Library.pretty/: 10mOhm_pcb_resistor.kicad_mod  38146-heatsink.kicad_mod  AZ576-1A-24DE.kicad_mod  BindingPost.kicad_mod  C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  C_1210_3225Metric.kicad_mod  DFN-12_DF_LIT.kicad_mod  D_SMA.kicad_mod  Fuse_wuerth_696103101002.kicad_mod  IND_SRN8040_BRN.kicad_mod  K_DIP8_AZ576-1C_AMZ.kicad_mod  LED_0603_1608Metric.kicad_mod  LQFP-32_7x7mm_P0.8mm.kicad_mod  L_Vishay_IHLP-5050.kicad_mod  MountingHole_3.5mm.kicad_mod  MountingHole_5.3mm_M5_Pad.kicad_mod  NetTie-2_SMD_Pad0.5mm.kicad_mod  Nexperia_CFP3_SOD-123W.kicad_mod  PG-TSDSON-8-32.kicad_mod  PW16_TEX.kicad_mod  PinHeader_1x08_P2.54mm_Vertical.kicad_mod  R_0603_1608Metric_Pad0.98x0.95mm_HandSolder.kicad_mod  SEWF3920D5L00P9.kicad_mod  SOIC-8_3.9x4.9mm_P1.27mm.kicad_mod  SOT-23-5_HandSoldering.kicad_mod  SOT-23-6.kicad_mod  SPM10065VC-D.kicad_mod  SSOP-16_3.9x4.9mm_P0.635mm.kicad_mod  SW4_1825910-B_TEC.kicad_mod  SolderJumper-2_P1.3mm_Open_TrianglePad1.0x1.5mm.kicad_mod  TO-277-3LD_ONS.kicad_mod  TSOT-23-8.kicad_mod  TSSOP-14_4.4x5mm_P0.65mm.kicad_mod  Tag-Connect_TC2030-IDC-NL_2x03_P1.27mm_Vertical.kicad_mod  TerminalBlock_1x02_P5.08mm_Horizontal.kicad_mod  TestPoint_Pad_D1.0mm.kicad_mod  Texas_RGW0020A_VQFN-20-1EP_5x5mm_P0.65mm_EP3.15x3.15mm_ThermalVias.kicad_mod  UDFN6_HKA_MCH-L.kicad_mod  VQFN-HR26_RPM_TEX.kicad_mod  (+2 more)
hardware/packages3D/: 022232081.stp  DFN-12_DF_LIT.step  IHLP-5050.step  IND_SRN8040_BRN.step  K_DIP8_AZ576-1C_AMZ.step  RYQ0021A.stp  TO-277-3LD_ONS.step  UDFN6_HKA_MCH.step  spm10065vt.step  vicor-38146.step
software/: PSB_V1.ioc  STM32C031XX_FLASH.ld  cross-gcc.txt  meson.build
software/include/: ad5293.hpp  buck_boost.hpp  com.hpp  converter.hpp  error.hpp  fixed_map.hpp  fixed_vector.hpp  fixpoint.hpp  irq.hpp  ldo.hpp  (+9 more)
(+19 files in other folders)
